--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,11 @@
-streamlit_folium
-joblib
-shapely
-geopy
-pandas
 folium
-openpyxl
+geopy
 networkx
-pyarrow
-plotly
-scipy
-requests
-osmnx
-validators
-cachetools
-dataclasses
-six
-jinja2
-branca
-tornado
 numpy
-charset_normalizer
-gitdb
-blinker
-certifi
+osmnx
+pandas
+Shapely
+streamlit
+streamlit_folium
 openpyxl
 scikit-learn
-psutil
